# QTradeSystematic

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODEX.md  CODING_RULES.md  FEATURES.md  README.md  TODO.md  WORKFLOWS.md  pyproject.toml
.claude/commands/: deep-refactor.md  qts-alpha-autoresearch.md
configs/assets/: crypto_future.yml  vn100.yml
configs/data/: vn30f1m_intraday.yaml
configs/deployments/: local.yaml
data/: VN30F1M.csv
docker/: Dockerfile.app  compose.yaml
docker/env/: .env.example
docs/: creating_strategy.md  installation.md  introduction.md  logging.md  pull_data.md  run_backtest.md  sweep.md
examples/: btc_momentum.yaml  research_zipline.yaml
lib/vectorbt.pro-main/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
lib/vectorbt.pro-main/.github/: FUNDING.yml
lib/vectorbt.pro-main/notebooks/: BasicRSI.ipynb  CrossValidation.ipynb  MTFAnalysis.ipynb  PQN_MTF.ipynb  PQN_ParamCV.ipynb  PQN_Patterns.ipynb  PQN_Projections.ipynb  PatternsProjections.ipynb  QQ_DiscretionarySignals.ipynb  SignalDevelopment.ipynb  StopSignals.ipynb  SuperTrend.ipynb  TelegramSignals.ipynb
lib/vectorbt.pro-main/scripts/: build_wheel.sh
lib/vectorbt.pro-main/tests/: test_ca_registry.py  test_data.py  test_indicators.py  test_jit_registry.py  test_labels.py  test_ohlcv.py  test_records.py  test_returns.py  test_signals.py  test_utils.py  utils.py
lib/vectorbt.pro-main/tests/test_base/: test_accessors.py  test_combining.py  test_grouping.py  test_indexing.py  test_resampling.py  test_reshaping.py  test_wrapping.py
lib/vectorbt.pro-main/tests/test_generic/: test_generic.py  test_patterns.py  test_plotting.py  test_splitting.py
lib/vectorbt.pro-main/tests/test_portfolio/: test_analysis.py  test_core.py  test_from_order_func.py  test_from_orders.py  test_from_signals.py  test_pfopt.py
lib/vectorbt.pro-main/vectorbtpro/: __init__.py  _dtypes.py  _opt_deps.py  _settings.py  _typing.py  _version.py  accessors.py
lib/vectorbt.pro-main/vectorbtpro/base/: __init__.py  accessors.py  chunking.py  combining.py  decorators.py  flex_indexing.py  indexes.py  indexing.py  merging.py  preparing.py  reshaping.py  wrapping.py
lib/vectorbt.pro-main/vectorbtpro/base/grouping/: __init__.py  base.py  nb.py
lib/vectorbt.pro-main/vectorbtpro/base/resampling/: __init__.py  base.py  nb.py
lib/vectorbt.pro-main/vectorbtpro/data/: __init__.py  base.py  decorators.py  nb.py  saver.py  updater.py
lib/vectorbt.pro-main/vectorbtpro/data/custom/: __init__.py  alpaca.py  av.py  bento.py  binance.py  ccxt.py  csv.py  custom.py  db.py  duckdb.py  feather.py  file.py  finpy.py  gbm.py  gbm_ohlc.py  hdf.py  local.py  ndl.py  parquet.py  polygon.py  random.py  random_ohlc.py  remote.py  sql.py  synthetic.py  tv.py  yf.py
lib/vectorbt.pro-main/vectorbtpro/generic/: __init__.py  accessors.py  analyzable.py  decorators.py  drawdowns.py  enums.py  plots_builder.py  plotting.py  price_records.py  ranges.py  sim_range.py  stats_builder.py
lib/vectorbt.pro-main/vectorbtpro/generic/nb/: __init__.py  apply_reduce.py  base.py  iter_.py  patterns.py  records.py  rolling.py  sim_range.py
lib/vectorbt.pro-main/vectorbtpro/generic/splitting/: __init__.py  base.py  decorators.py  nb.py  purged.py  sklearn_.py
lib/vectorbt.pro-main/vectorbtpro/indicators/: __init__.py  configs.py  enums.py  expr.py  factory.py  nb.py  talib_.py
lib/vectorbt.pro-main/vectorbtpro/indicators/custom/: __init__.py  adx.py  atr.py  bbands.py  hurst.py  ma.py  macd.py  msd.py  obv.py  ols.py  patsim.py  pivotinfo.py  rsi.py  sigdet.py  stoch.py  supertrend.py  vwap.py
lib/vectorbt.pro-main/vectorbtpro/labels/: __init__.py  enums.py  nb.py
lib/vectorbt.pro-main/vectorbtpro/labels/generators/: __init__.py  bolb.py  fixlb.py  fmax.py  fmean.py  fmin.py  fstd.py  meanlb.py  pivotlb.py  trendlb.py
lib/vectorbt.pro-main/vectorbtpro/ohlcv/: __init__.py  accessors.py  nb.py
lib/vectorbt.pro-main/vectorbtpro/portfolio/: __init__.py  base.py  call_seq.py  chunking.py  decorators.py  enums.py  logs.py  orders.py  preparing.py  trades.py
lib/vectorbt.pro-main/vectorbtpro/portfolio/nb/: __init__.py  analysis.py  core.py  ctx_helpers.py  from_order_func.py  from_orders.py  from_signals.py  iter_.py  records.py
lib/vectorbt.pro-main/vectorbtpro/portfolio/pfopt/: __init__.py  base.py  nb.py  records.py
lib/vectorbt.pro-main/vectorbtpro/px/: __init__.py  accessors.py  decorators.py
lib/vectorbt.pro-main/vectorbtpro/records/: __init__.py  base.py  chunking.py  col_mapper.py  decorators.py  mapped_array.py  nb.py
lib/vectorbt.pro-main/vectorbtpro/registries/: __init__.py  ca_registry.py  ch_registry.py  jit_registry.py  pbar_registry.py
lib/vectorbt.pro-main/vectorbtpro/returns/: __init__.py  accessors.py  enums.py  nb.py  qs_adapter.py
lib/vectorbt.pro-main/vectorbtpro/signals/: __init__.py  accessors.py  enums.py  factory.py  nb.py
lib/vectorbt.pro-main/vectorbtpro/signals/generators/: __init__.py  ohlcstcx.py  ohlcstx.py  rand.py  randnx.py  randx.py  rprob.py  rprobcx.py  rprobnx.py  rprobx.py  stcx.py  stx.py
lib/vectorbt.pro-main/vectorbtpro/utils/: __init__.py  annotations.py  array_.py  attr_.py  caching.py  chaining.py  checks.py  chunking.py  colors.py  config.py  cutting.py  datetime_.py  datetime_nb.py  decorators.py  enum_.py  eval_.py  execution.py  figure.py  formatting.py  hashing.py  image_.py  jitting.py  magic_decorators.py  mapping.py  math_.py  merging.py  module_.py  params.py  parsing.py  path_.py  pbar.py  pickling.py  profiling.py  random_.py  requests_.py  schedule_.py  search.py  selection.py  tagging.py  telegram.py  (+1 more)
lib/vectorbt.pro-main/vectorbtpro/utils/knowledge/: __init__.py  asset_pipelines.py  base_asset_funcs.py  base_assets.py  custom_asset_funcs.py  custom_assets.py
notebooks/: ml_factor_e2e.ipynb  stat_arb_end_to_end.ipynb  stock_ml_factor_e2e.ipynb  store_vn30f1m.ipynb  vn100_quantamental_mlflow.ipynb  vn100_quantamental_mlflow.py  vn100_quantamental_mlflow_classification.py
qts/: __init__.py
tests/: conftest.py  test_repo_hygiene.py
(+209 files in other folders)
