[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "qtradesystematic"
version = "0.1.0"
description = "Config-driven systematic trading platform for stocks and crypto."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [
  { name = "QTradeSystematic Contributors" },
]
dependencies = [
  "duckdb>=1.4.0",
  "numpy>=2.1.0",
  "pandas>=2.2.0",
  "polars>=1.31.0",
  "pyarrow>=20.0.0",
  "PyYAML>=6.0.2",
  "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.11.0",
]
data = [
  "httpx>=0.28.0",
]
vn = [
  "vnstock>=4.0.0",
]
research = [
  "matplotlib>=3.9.0",
  "xgboost>=3.0.0",
  "vectorbtpro @ file:./lib/vectorbt.pro-main",
]
notebook = [
  "ipykernel>=6.29.0",
  "IPython>=8.0.0",
  "nbclient>=0.10.0",
  "nbformat>=5.10.0",
]
zipline = [
  "zipline-reloaded>=3.1.1",
]
execution = [
  "binance-connector>=3.12.0",
  "futu-api>=9.4.0",
  "python-dotenv>=1.0.0",
]
orchestration = [
  "prefect>=3.4.0",
  "prefect-redis>=0.2.11,<0.3.0",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",
]
tracking = [
  "mlflow>=3.0.0",
  "psycopg2-binary>=2.9.0",
]
tuning = [
  "optuna>=4.2.0",
]
reporting = [
  "pyfolio-reloaded>=0.9.5",
]
all = [
  "qtradesystematic[data,vn,research,notebook,zipline,execution,orchestration,tracking,tuning,reporting,dev]",
]

[tool.hatch.build.targets.wheel]
packages = ["qts"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "paper: requires paper or sandbox broker accounts",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
